--- a/style.css
+++ b/style.css
@@ -21,16 +21,85 @@ body{
     color: black;
     border-style: solid;
     border-width: 5px;
+    border-radius: 10px;
+
     margin: 0 auto;
-    display:inline-block;
+    margin-bottom: 1%;
+    display:flex;
     
+}
+
+
+#searchArea{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    background:mintcream;
+    min-width: 100px;
+    height: 100px;
+    border: 8px solid;
+    border-radius: 10px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    position: sticky;
+    top:0;
+}
+#insideSearchName{
+    background-color: brown;
+    height: 55px;
+    width: 200px;
+    font-size: 48px;
+    color: black;
+    border-style: solid;
+    border-radius: 10px;
+    border-width: 3px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-right: 1%;
+    justify-content: center;
+    
+}
+#searchBox{
+    justify-content: center;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    min-height: 45px;
+    min-width: 455px;
+    font-size: 24px;
+    position:sticky;
+    border-radius: 10px;
+    margin-right: 1%;
+}
+#searchButton{
+    justify-content: center;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    min-height: 40px;
+    min-width: 45px;
+    font-size: 16px;
+    position:sticky;
+    border-radius: 10px;
+    margin-right: 1%;
+}
+#randomButton{
+    justify-content: center;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    min-height: 40px;
+    min-width: 45px;
+    font-size: 16px;
+    position:sticky;
+    border-radius: 10px;
+    margin-right: 1%;
+
 }
 /*container for where our pokemon will be displayed*/
 .pokedexContainer{
     background-color: brown;
-    min-height: 100vh;
+    min-height: 200vh;
     max-height: min-content;
-    margin: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
     border: 7px solid;
     display: flexbox;
     flex-wrap: wrap;
@@ -64,5 +133,9 @@ body{
   }
 .pokedexContainer li:hover{
     transform: scale(1.15);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
+}
+.button:hover{
+    transform: scale(1.1);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
 }
