--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body{
     border-style: solid;
     border-width: 5px;
     border-radius: 10px;
-
     margin: 0 auto;
     margin-bottom: 1%;
     display:flex;
@@ -32,11 +31,12 @@ body{
    a random pokemon selection as well */
 #searchArea{
     text-align: center;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     background: linear-gradient(mintcream, aliceblue);
     min-width: 100px;
-    height: 150px;
+    min-height: 150px;
+    max-height: 160px;
     border: 8px solid;
     border-radius: 10px;
     margin-top: 1%;
@@ -61,9 +61,10 @@ body{
 /* search box for user input */
 #searchBox{
     justify-content: center;
+    text-align: left;
     margin: 1%;
-    min-height: 45px;
-    min-width: 455px;
+    height: 65px;
+    width: 455px;
     font-size: 48px;
     position:sticky;
     border-radius: 10px;
@@ -107,6 +108,9 @@ body{
     font-size: 20px;
     text-align: center;
     margin: 1%;
+    max-height: 245px;
+    min-width: 810px;
+    /* max-width: 810px; */
 }
 /* pokedex list area */
 #pokedex{
