--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,7 @@ body{
     background-attachment: fixed;
     display:block;
     justify-content: center;
-    min-height: none;
+    min-height: 80vh;
 }
 .textArea{
     justify-content: center;
@@ -20,12 +20,13 @@ body{
     font-size: 72px;
     text-align: center;
     border-radius: 100px;
-    padding: 1%;   
+    padding: 1%;  
+    margin: .5%; 
 }
 #pokemonDisplay{
-    background-color: brown;
-    min-height:100vh;
+    min-height:80vh;
     max-height: min-content;
+    margin-top: 0%;
     margin-left: 20%;
     margin-right: 20%;
     border: 7px solid;
@@ -36,6 +37,7 @@ body{
 
 }
 #pokemonDisplay img {
+    background: linear-gradient(mintcream, grey);
     margin: 1%;
     justify-content: center;
     max-width: 40%;
@@ -44,5 +46,25 @@ body{
     border: solid 10px;
   }
 #pokemonImage{
-
+    display: inline;
+    width: 350px;
+}
+.textBox{
+    background: linear-gradient(mintcream, grey);
+    display: inline-flex;
+    margin: 1%;
+    border: solid 3px;
+    border-radius: 30px;
+    width: 300px;
+    height: 200px;
+    text-align: center;
+    justify-content: center;
+}
+#type{
+    font-size: 24px;
+    padding: 1%;
+}
+#desc{
+    font-size: 24px;
+    padding: 1%;
 }
